2023-10-20  Enrico Schumann  <es@enricoschumann.net>

	* R/plotseries.R (plotseries): add argument
	'reset.par', with default TRUE

2023-10-16  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (.quantile, .fan): computation of
        quantiles is now more efficient

        * R/plotseries.R (.fan): median.col is no longer
        ignored

2023-10-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): return a list, with
        currently only a single member ("time.grid.at")

2023-09-28  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add BISdata
        (Version): 0.2.0 (use dots only as separators, i.e.
        no hyphen)

2022-12-09  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.zoo): add argument
        "bm"; keep only timestamps in "bm" that are
        also in "series"

2022-12-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): reset
        only those graphical parameters that plotseries
        actually changes

2022-12-02  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): compute
        returns only if required for labels
        (plotseries.default): reset graphical parameters
        on exit
        (.spread_labels): set trade-off overlap/distance to
        best position to 2, i.e. overlap is twice as bad as
        distance; handle NAs

2022-11-23  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default):
        experimental support for zoo::yearmon

2022-11-02  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): pass
        argument "type" on to "lines"

2022-10-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): add parameters
        'streaks.up.labels.cex' and 'streaks.down.labels.cex'

2022-09-20  Enrico Schumann  <es@enricoschumann.net>
