@@ -1,7 +1,12 @@
+2024-02-23  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/plotseries.R (.quantile, .fan): add labels to
+        all chosen "probs", not just the median
+
 2023-10-20  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/plotseries.R (plotseries): add argument
-	'reset.par', with default TRUE
+        * R/plotseries.R (plotseries): add argument
+        'reset.par', with default TRUE
 
 2023-10-16  Enrico Schumann  <es@enricoschumann.net>
 
